<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp"
        android:shadowColor="@color/white"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="1"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/project_description"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/img_unicamp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tv_app_desc"
        android:layout_centerHorizontal="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:src="@drawable/ic_nrg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_above="@+id/tv_creditos"
        android:background="#cdcdcd" />

    <TextView
        android:id="@+id/tv_creditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="26dp"
        android:text="@string/credits" />

    <TextView
        android:id="@+id/tv_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_contact"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="26dp"
        android:text="@string/site" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_above="@+id/tv_contact"
        android:background="#cdcdcd" />

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_creditos"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="26dp"
        android:text="@string/contato" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_above="@+id/tv_site"
        android:background="#cdcdcd" />

</RelativeLayout>